# resgen

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build_push.yml
examples/: basic.rs
examples/res/values/: colors.xml  dimens.xml  strings.xml
examples/res/values-night/: colors.xml
src/: lib.rs
src/generator/: colors.rs  dimens.rs  drawables.rs  mod.rs  r_entry.rs  strings.rs
src/parser/: colors.rs  dimens.rs  drawables.rs  mod.rs  strings.rs  utils.rs
